# unx

./: .gitignore  NOTES  README.md  ovmf.fd  run.cmd  rust-toolchain
.cargo/: config.toml
bootinfo/: Cargo.toml
bootinfo/src/: boot_info.rs  lib.rs  memory_layout.rs
bootloader/: Cargo.toml
bootloader-efi/: Cargo.toml  linker.ld  x86_64-bootloader.json
bootloader-efi/src/: main.rs
bootloader/.cargo/: config.toml
bootloader/src/: allocator.rs  file.rs  load_kernel.rs  main.rs  memory.rs
diskbuilder/: Cargo.toml
kernel/: Cargo.toml  x86_64-unx.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  main.rs
kernel/src/console/: framebuffer.rs  mod.rs
kernel/src/memory/: mapper.rs  mod.rs  phys.rs
kernel/src/memory/heap/: bump.rs  mod.rs
psf/: Cargo.toml
psf/src/: lib.rs
unx-build/: Cargo.toml
unx-build/src/: build.rs  main.rs  run.rs
