[package]
name = "bootloader-efi"
version = "0.1.0"
authors = ["Tim Peters <mail@darksecond.nl>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = "0.8"
uefi-services = "0.5.0"
log = { version = "0.4.14", default-features = false }
bootloader = { path = "../bootloader" }