[package]
name = "bootloader"
version = "0.1.0"
authors = ["Tim Peters <mail@darksecond.nl>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = "0.8"
uefi-services = "0.5.0"
log = { version = "0.4.14", default-features = false }
xmas-elf = "0.7.0"
x86_64 = "0.14.0"
bootinfo = { path = "../bootinfo" }