[package]
name = "kernel"
version = "0.1.0"
authors = ["Tim Peters <mail@darksecond.nl>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.14.0"
spinning_top = "0.2.3"
volatile = "0.4.4"
uart_16550 = "0.2.13"
bootinfo = { path = "../bootinfo" }
psf = { path = "../psf" }